@@ -57,6 +57,9 @@ New in 1.10a:
 
   - The `color-tests' option causes colored test result output on terminals.
 
+  - New prefix `notrans_' for manpages which should not be transformed
+    by --program-transform.
+
 Bugs fixed in 1.10a:
 
 * Long standing bugs:
