@@ -1,5 +1,15 @@
 2008-03-11  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
+	Implement the `notrans_' prefix for untransformed manpages.
+	* automake.in (handle_man_pages), lib/am/mans.am: Implement
+	notrans_ prefix for MANS primary and rework dependencies for
+	install-man%SECTION%; use only vars defined in Makefile.am.
+	* doc/automake.texi (Renaming, Uniform, Man pages):
+	Document notrans_ prefix.
+	* NEWS: Update.
+	* tests/notrans.test: New test.
+	* tests/Makefile.am: Update.
+
 	* automake.in (handle_man_pages): Reindent, for next patch.
 
 2008-03-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
